Fix overflow on id="content"

--- a/sass/general/general.scss
+++ b/sass/general/general.scss
@@ -131,8 +131,8 @@ body{
         }        
     }
 }
-main{
-    overflow-y: hidden;
+[id="content"]{
+    overflow: hidden;
 }
 figure{
     max-width: 100%!important;
